# temporal-executive-agent

./: .gitattributes  DISCLAIMER.md  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  pyproject.toml
memory/: constitution.md
src/tea/: cli.py  loader.py  planner.py
tasks/: sample.json
tests/: test_tea_cli.py
tests/fixtures/: tasks.json
