[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-executive-agent"
version = "0.1.0"
description = "Temporal Executive Agent CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tea = "tea.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
